crates/red_knot_python_semantic/resources/mdtest/snapshots/functions.md_-_Generic_functions___PEP_695_syntax_-_Inferring_a_constrained_typevar.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: functions.md - Generic functions: PEP 695 syntax - Inferring a constrained typevar
mdtest path: crates/red_knot_python_semantic/resources/mdtest/generics/pep695/functions.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | def f[T: (int, None)](x: T) -> T:
 4 |     return x
 5 | 
 6 | reveal_type(f(1))  # revealed: int
 7 | reveal_type(f(True))  # revealed: int
 8 | reveal_type(f(None))  # revealed: None
 9 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy constraints of type variable `T`"
10 | reveal_type(f("string"))  # revealed: Unknown
```

# Diagnostics

```
info: revealed-type: Revealed type
 --> src/mdtest_snippet.py:6:1
  |
4 |     return x
5 |
6 | reveal_type(f(1))  # revealed: int
  | ^^^^^^^^^^^^^^^^^ `int`
7 | reveal_type(f(True))  # revealed: int
8 | reveal_type(f(None))  # revealed: None
  |

```

```
info: revealed-type: Revealed type
 --> src/mdtest_snippet.py:7:1
  |
6 | reveal_type(f(1))  # revealed: int
7 | reveal_type(f(True))  # revealed: int
  | ^^^^^^^^^^^^^^^^^^^^ `int`
8 | reveal_type(f(None))  # revealed: None
9 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy constra...
  |

```

```
info: revealed-type: Revealed type
  --> src/mdtest_snippet.py:8:1
   |
 6 | reveal_type(f(1))  # revealed: int
 7 | reveal_type(f(True))  # revealed: int
 8 | reveal_type(f(None))  # revealed: None
   | ^^^^^^^^^^^^^^^^^^^^ `None`
 9 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy constra...
10 | reveal_type(f("string"))  # revealed: Unknown
   |

```

```
error: lint:invalid-argument-type: Argument to this function is incorrect
  --> src/mdtest_snippet.py:10:15
   |
 8 | reveal_type(f(None))  # revealed: None
 9 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy constra...
10 | reveal_type(f("string"))  # revealed: Unknown
   |               ^^^^^^^^ Argument type `Literal["string"]` does not satisfy constraints of type variable `T`
   |
info: Type variable defined here
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import reveal_type
2 |
3 | def f[T: (int, None)](x: T) -> T:
  |       ^^^^^^^^^^^^^^
4 |     return x
  |

```

```
info: revealed-type: Revealed type
  --> src/mdtest_snippet.py:10:1
   |
 8 | reveal_type(f(None))  # revealed: None
 9 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy constra...
10 | reveal_type(f("string"))  # revealed: Unknown
   | ^^^^^^^^^^^^^^^^^^^^^^^^ `Unknown`
   |

```
